--- a/projects/oneteme/inspect-ng-collector/package.json
+++ b/projects/oneteme/inspect-ng-collector/package.json
@@ -9,8 +9,9 @@
     "url": "https://github.com/oneteme/inspect-ng-collector.git"
   },
   "peerDependencies": {
-    "@angular/common": "^17.3.0",
-    "@angular/core": "^17.3.0"
+    "@angular/common": "^16.2.8",
+    "@angular/core": "^16.2.8",
+    "@angular/router": "^16.2.8"
   },
   "dependencies": {
     "tslib": "^2.3.0"
