--- a/projects/oneteme/inspect-ng-collector/package.json
+++ b/projects/oneteme/inspect-ng-collector/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oneteme/inspect-ng-collector",
-  "version": "0.18.22",
+  "version": "0.19.00",
   "description": "inspect ng collector",
   "homepage": "https://github.com/oneteme/inspect-ng-collector",
   "bugs": "https://github.com/oneteme/inspect-ng-collector/issues",
@@ -9,9 +9,9 @@
     "url": "https://github.com/oneteme/inspect-ng-collector.git"
   },
   "peerDependencies": {
-    "@angular/common": "^18.2.13",
-    "@angular/core": "^18.2.13",
-    "@angular/router": "^18.2.13"
+    "@angular/common": ">=16.2.8",
+    "@angular/core": ">=16.2.8",
+    "@angular/router": ">=16.2.8"
   },
   "dependencies": {
     "tslib": "^2.8.0"
