--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,5 @@
-name: CI/CD
-on:
-  pull_request:
-    branches: main
-    types: [opened, synchronize, reopened]
-  push:
-    branches: main
-    paths-ignore: [ "README.md", "doc/**" ]
+name: tag release
+on: workflow_dispatch
 jobs:
   scan:
     runs-on: ubuntu-latest
@@ -32,3 +26,18 @@ jobs:
       - run: npm publish ./dist/oneteme/inspect-ng-collector --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: extract version
+        id: npmVer
+        run: echo "version=$(node -p 'require("./projects/oneteme/inspect-ng-collector/package.json").version')" >>$GITHUB_OUTPUT
+    outputs:
+      version: ${{ steps.npmVer.outputs.version }}
+  release:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        branch: "${{ github.ref_name }}"
+        version: "v${{ needs.deploy.outputs.version }}"
+      run: gh release create "$version" --repo="$GITHUB_REPOSITORY" --target="$branch" --title="$version" --generate-notes
