--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,33 @@
 name: CI/CD
 on:
+  pull_request:
+    branches: main
+    types: [opened, synchronize, reopened]
   push:
-    branches: [ "main" ]
+    branches: main
     paths-ignore: [ "README.md", "doc/**" ]
 jobs:
-  build:
+  scan:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
         with:
-          node-version: '18.x'
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
           registry-url: 'https://registry.npmjs.org'
           scope: '@oneteme'
       - run: npm install
       - run: npm run build '@oneteme/inspect-ng-collector'
-      - run: npm config ls
-      - run: npm publish ./dist/oneteme/inspect-ng-collector --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-  sonarcloud:
-    name: SonarCloud
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  
+      #- run: npm publish ./dist/oneteme/inspect-ng-collector --access public
+      #  env:
+      #    NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
