--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,22 @@
 name: tag release
 on: workflow_dispatch
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 18
+    - uses: oneteme/automation-scripts/.github/actions/sonar-npm-scan@main
+      with:
+        package: 'inspect-ng-collector'
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -12,25 +27,19 @@ jobs:
         node-version: 18
         registry-url: 'https://registry.npmjs.org'
         scope: '@oneteme'
-    - run: npm install
-    - run: npm run build '@oneteme/inspect-ng-collector'
-    - run: npm publish ./dist/oneteme/inspect-ng-collector --access public
+    - uses: oneteme/automation-scripts/.github/actions/npm-deploy@main
+      with:
+        package: 'inspect-ng-collector'
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-    - uses: SonarSource/sonarqube-scan-action@v4.2.1
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    - name: extract version
-      id: npmVer
-      run: echo "version=$(node -p 'require("./projects/oneteme/inspect-ng-collector/package.json").version')" >>$GITHUB_OUTPUT
+    - uses: oneteme/automation-scripts/.github/actions/npm-project-version@main
+      id: prj_ver
     outputs:
-      version: ${{ steps.npmVer.outputs.version }}
+      version: ${{ steps.prj_ver.outputs.version }}
   release:
     needs: deploy
     runs-on: ubuntu-latest
     steps:
-    - run: gh release create "$version" --repo="$GITHUB_REPOSITORY" --target="$branch" --title="$version" --generate-notes
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        branch: "${{ github.ref_name }}"
+    - uses: oneteme/automation-scripts/.github/actions/create-release-notes@main
+      with:
         version: "v${{ needs.deploy.outputs.version }}"
