--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,4 +44,6 @@ jobs:
     steps:
     - uses: oneteme/automation-scripts/.github/actions/create-release-notes@main
       with:
-        version: "v${{ needs.deploy.outputs.version }}"
+        version: ${{ needs.deploy.outputs.version }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
