--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,5 @@
 name: tag release
-on: 
-  workflow_dispatch:
-    inputs:
-      ng-collector:
-        type: boolean
-        description: publish ng-collector library
+on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,9 +9,10 @@ jobs:
         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
     - uses: actions/setup-node@v4
       with:
-        node-version: 20
-    - uses: oneteme/automation-scripts/.github/actions/npm-build-project@main
-    - uses: oneteme/automation-scripts/.github/actions/npm-scan-project@main #see package.json: scripts.build
+        node-version: 18
+    - uses: oneteme/automation-scripts/.github/actions/sonar-npm-scan@main
+      with:
+        package: 'inspect-ng-collector'
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   deploy:
@@ -24,29 +20,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
     - uses: actions/setup-node@v4
       with:
-        node-version: 20
+        node-version: 18
         registry-url: 'https://registry.npmjs.org'
         scope: '@oneteme'
-    - uses: oneteme/automation-scripts/.github/actions/npm-build-project@main
-    - uses: oneteme/automation-scripts/.github/actions/npm-deploy-project@main
-      if: ${{ inputs.ng-collector }}
+    - uses: oneteme/automation-scripts/.github/actions/npm-deploy@main
       with:
-        project: 'inspect-ng-collector'
+        package: 'inspect-ng-collector'
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-    - uses: oneteme/automation-scripts/.github/actions/npm-project-version@main 
+    - uses: oneteme/automation-scripts/.github/actions/npm-project-version@main
+      with:
+        path: './projects/oneteme/inspect-ng-collector/package.json'
       id: prj_ver
-    outputs:  # take global project version
+    outputs:
       version: ${{ steps.prj_ver.outputs.version }}
   release:
     needs: deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: oneteme/automation-scripts/.github/actions/github-release-notes@main
+    - uses: oneteme/automation-scripts/.github/actions/create-release-notes@main
       with:
         version: ${{ needs.deploy.outputs.version }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#  pages:
