--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
       version: ${{ steps.prj_ver.outputs.version }}
 # deploy: cannot override package
   release:
+    if: github.ref_name == 'main'
     needs: build
     runs-on: ubuntu-latest
     steps:
