--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inspect-collectors",
-  "version": "1.2.0-beta.1",
+  "version": "1.2.0",
   "description": "Inspect ng collector",
   "private": false,
   "homepage": "https://github.com/oneteme/inspect-ng-collector",
