--- a/projects/oneteme/inspect-ng-collector/package.json
+++ b/projects/oneteme/inspect-ng-collector/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oneteme/inspect-ng-collector",
-  "version": "1.2.0-beta.1",
+  "version": "1.2.0",
   "description": "inspect ng collector",
   "homepage": "https://github.com/oneteme/inspect-ng-collector",
   "bugs": "https://github.com/oneteme/inspect-ng-collector/issues",
